<resources>
    <string name="app_name">Me Pague</string>
    <string name="action_settings">Sair</string>
    <string name="nome_do_cliente">Nome do cliente</string>
    <string name="endereco">Endereço:</string>
    <string name="numero">Número:</string>
    <string name="bairro">Bairro:</string>
    <string name="cidade">Cidade:</string>
    <string name="title_activity_entrar_usuario">EntrarUsuario</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_sua_senha_clique_aqui">Esqueceu sua senha ? Clique aqui.</string>
    <string name="title_activity_cadastro_user">CadastroUser</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="confirma_senha">Confirma senha</string>
    <string name="nome">Nome</string>
    <string name="title_activity_produtos_cliente">ProdutosCliente</string>
    <string name="quantidade">Quantidade</string>
    <string name="nome_do_produto_dialog">Nome do produto</string>
    <string name="preco_do_produto">Preço do produto</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="quantidade_de_produtos">Quantidade de produtos</string>
    <string name="valor_do_produto">Valor do produto</string>
    <string name="excluir">Excluir</string>
    <string name="atualizar">Atualizar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="buscar">Buscar</string>
    <string name="estado">Estado:</string>
    <string name="data_compra">Data da compra</string>
    <string name="title_activity_reset_senha">Reset_senha</string>
    <string name="voc_receber_um_e_mail_de_altera_o_de_senha_no_e_mail_cadastrado_como_login">Você receberá um e-mail de alteração de senha no e-mail cadastrado</string>
    <string name="enviar_e_mail">Enviar E-mail</string>
    <string name="title_activity_datas_vendas_cobranca">DatasVendasCobranca</string>
    <string name="recebido">Recebido</string>
    <string name="cadastrar_produtos">Cadastrar\n Produtos</string>
    <string name="total">Total:</string>
    <string name="cadastrar_datas">Cadastrar datas</string>
    <string name="cadastrar_cliente">Cadastrar\nCliente</string>
    <string name="data_da_venda">Data da venda</string>
    <string name="data_de_cobran_a">Data de cobrar</string>
    <string name="devolvido">Devolvido</string>
    <string name="recebido_parcialmente">Recebido parcialmente</string>
    <string name="logo">TODO</string>
    <string name="textview">Textview</string>
    <string name="todo">todo</string>
    <string name="cep">Cep</string>
    <string name="total_zero">0.00</string>
    <string name="title_activity_recebido_parcial">RecebidoParcial</string>
    <string name="receber_parcialmente">Receber Parcialmente</string>
    <string name="telefone">Telefone</string>
    <string name="cadastrar_datas_de_vendas">CADASTRE AS DATAS DE VENDAS - CLIQUE AQUI</string>
    <string name="cadastre_os_produtos_vendidos_clique_aqui">CADASTRE OS PRODUTOS VENDIDOS - CLIQUE AQUI</string>
    <string name="title_activity_cadastro_usuario_act_view">CadastroUsuarioActView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
